--- a/folio/src/components/css/chatbubble.css
+++ b/folio/src/components/css/chatbubble.css
@@ -19,7 +19,7 @@
 
 .received {
     border-top-left-radius: 0;
-    background-color: #403c3c;
+    background-color: #28282B;
     animation: fade-in-move-right 0.5s;
     animation: fade-in-move-right 0.5s;
     -moz-animation: fade-in-move-right 0.5s; /* Firefox */
