--- a/folio/src/css/chatfolio.css
+++ b/folio/src/css/chatfolio.css
@@ -4,7 +4,7 @@ body{
 
 .tile{
     background-color: #151516;
-    margin: 0.5em;
+    margin: 0.2em;
     border-radius: 0.6em;
     padding: 1em;
     width: fit-content;
@@ -17,4 +17,13 @@ body{
 
 .tile:hover{
     box-shadow: rgba(0, 153, 255, 0.35) 0px 5px 15px;
+}
+
+.sticky{
+    top:0;
+    position: -webkit-sticky;
+    position: sticky;
+    background-color: #000;
+    width: 100%;
+    height: auto;
 }
