--- a/folio/src/components/css/pagecontent.css
+++ b/folio/src/components/css/pagecontent.css
@@ -7,6 +7,28 @@
     -o-animation: fade-in 0.5s; /* Opera */
 }
 
+.tile{
+    background-color: #151516;
+    margin: 0.2em;
+    border-radius: 0.6em;
+    padding: 1em;
+    width: fit-content;
+    flex-grow: 1;
+    text-align: center;
+    align-items: center;
+    border: 0.1em solid #28282B;
+    cursor: pointer;
+}
+
+.tile:hover{
+    box-shadow: rgba(0, 153, 255, 0.35) 0px 5px 15px;
+}
+
+.info-container{
+    text-align: left;
+    margin-bottom: 1em;
+    width: 100%;
+}
 
 
 
