--- a/folio/src/css/index.css
+++ b/folio/src/css/index.css
@@ -4,10 +4,10 @@ body {
   margin: 0;
 }
 
-html,body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+html,
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
+    "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow-x: hidden;
@@ -15,6 +15,23 @@ html,body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+}
+
+.nostyle {
+  all: unset;
+  cursor: pointer;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.medium-text{
+  font-size: large;
+}
+
+hr{
+  border: 0.1em solid #28282b;
+  background-color: #28282b;
 }
