added experieces page

--- a/folio/src/css/index.css
+++ b/folio/src/css/index.css
@@ -35,3 +35,11 @@ hr{
   border: 0.1em solid #28282b;
   background-color: #28282b;
 }
+
+.vertical-center {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
