added more experiences

--- a/folio/src/components/css/navbar.css
+++ b/folio/src/components/css/navbar.css
@@ -1,17 +1,23 @@
-.nav{
+.nav {
     min-height: 1.5vh;
     padding: 1em 1.5em 1em 1.5em;
-    border-bottom: 0.1em solid #5A5A5A;
+    border-bottom: 0.1em solid #5a5a5a;
+    background: rgba(0, 0, 0, 0.6);
+    backdrop-filter: blur(0.5em);
 }
 
-.profile-image{
+.profile-image {
     border-radius: 50%;
     width: 2em;
     height: auto;
     border: 0.2em solid #d2ac47;
 }
 
-.icon{
+.icon {
     color: white;
     cursor: pointer;
+}
+
+.z-top {
+    z-index: 1;
 }
