--- a/folio/src/components/css/chatbubble.css
+++ b/folio/src/components/css/chatbubble.css
@@ -6,6 +6,10 @@
     color: rgba(255, 255, 255, 1);
     margin-bottom: 2em;
     word-wrap: break-word;
+    -webkit-user-select: none; /* Safari */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE10+/Edge */
+    user-select: none; /* Standard */
 }
 
 .sent {
@@ -19,7 +23,7 @@
 
 .received {
     border-top-left-radius: 0;
-    background-color: #28282B;
+    background-color: #28282b;
     animation: fade-in-move-right 0.5s;
     animation: fade-in-move-right 0.5s;
     -moz-animation: fade-in-move-right 0.5s; /* Firefox */
@@ -27,102 +31,13 @@
     -o-animation: fade-in-move-right 0.5s; /* Opera */
 }
 
-a{
+a {
     color: rgba(255, 214, 10, 1);
 }
 
-.user-icon{
+.user-icon {
     border-radius: 50%;
     width: 1.5em;
     height: 1.5em;
     border: 0.2em solid #d2ac47;
-}
-
-
-/* ========== Fade in animation ========== */
-@keyframes fade-in-move-left {
-    from {
-        opacity:0;
-        transform: translateX(100%);
-    }
-    to {
-        opacity:1;
-        transform: translateX(0%);
-    }
-}
-@-moz-keyframes fade-in-move-left { /* Firefox */
-    from {
-        opacity:0;
-        transform: translateX(100%);
-    }
-    to {
-        opacity:1;
-        transform: translateX(0%);
-    }
-}
-@-webkit-keyframes fade-in-move-left { /* Safari and Chrome */
-    from {
-        opacity:0;
-        transform: translateX(100%);
-    }
-    to {
-        opacity:1;
-        transform: translateX(0%);
-    }
-}
-@-o-keyframes fade-in-move-left { /* Opera */
-    from {
-        opacity:0;
-        transform: translateX(100%);
-    }
-    to {
-        opacity: 1;
-        transform: translateX(0%);
-    }
-}
-/* ============================================ */
-
-
-@keyframes fade-in-move-right {
-    from {
-        opacity: 0;
-        transform: translateX(-70%);
-    }
-    to {
-        opacity: 1;
-        transform: translateX(0);
-    }
-}
-
-@-moz-keyframes fade-in-move-right {
-    from {
-        opacity: 0;
-        transform: translateX(-70%);
-    }
-    to {
-        opacity: 1;
-        transform: translateX(0);
-    }
-}
-
-@-webkit-keyframes fade-in-move-right {
-    from {
-        opacity: 0;
-        transform: translateX(-70%);
-    }
-    to {
-        opacity: 1;
-        transform: translateX(0);
-    }
-}
-
-@-o-keyframes fade-in-move-right {
-    from {
-        opacity: 0;
-        transform: translateX(-70%);
-    }
-    to {
-        opacity: 1;
-        transform: translateX(0);
-    }
 }
