--- a/folio/src/components/css/pagecontent.css
+++ b/folio/src/components/css/pagecontent.css
@@ -1,12 +1,17 @@
 .pagecontent-root {
-    margin-top: 2em;
-    margin-bottom: 2em;
+    margin-top: 1em;
+    margin-bottom: 1em;
     margin-left: 1em;
     margin-right: 1em;
     animation: fade-in 0.5s;
     -moz-animation: fade-in 0.5s; /* Firefox */
     -webkit-animation: fade-in 0.5s; /* Safari and Chrome */
     -o-animation: fade-in 0.5s; /* Opera */
+
+    -webkit-user-select: none; /* Safari */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE10+/Edge */
+    user-select: none; /* Standard */
 }
 
 .tile {
@@ -43,41 +48,4 @@
     -moz-animation: fade-in 0.5s; /* Firefox */
     -webkit-animation: fade-in 0.5s; /* Safari and Chrome */
     -o-animation: fade-in 0.5s; /* Opera */
-}
-
-
-@keyframes fade-in {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
-}
-
-@-moz-keyframes fade-in {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
-}
-
-@-webkit-keyframes fade-in {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
-}
-
-@-o-keyframes fade-in-move-right {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
 }
